# myanime1996

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
public/: splash.html
scripts/: prepare-windows-installer.ps1
src/: App.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AdvancedSearchModal.tsx  AnimeCard.tsx  AnimeHoverPreview.tsx  AnimeRow.tsx  AnimeScheduleRateLimitGuideModal.tsx  AnimeShelfScrollable.tsx  AppShell.tsx  BottomPlayer.tsx  ConfirmDialog.tsx  GlobalTooltip.tsx  HeroSeeAllMenu.tsx  InAppNotificationToasts.tsx  LibraryStatusPickerModal.tsx  PlaylistPickerModal.tsx  PluginsPanel.tsx  RightNowDetailPane.tsx  RightNowFullscreenOverlays.tsx  RightNowHeaderSection.tsx  RightNowPlaying.tsx  RightNowPlaylistPanel.tsx  RightNowQueueSection.tsx  RightNowSourceResolveControls.tsx  RightPanelNav.tsx  SearchBar.tsx  SearchDropdown.tsx  SeasonLinkBadge.tsx  SettingsModal.tsx  Sidebar.tsx  SourceResolveLogPanel.tsx  SourceSelector.tsx  TopNavigation.tsx  WindowControls.tsx
src/constants/: catalogLimits.ts  upcomingSeasonFilters.ts
src/hooks/: useAniSkipOverlay.ts  useAnimeSearch.ts  useHlsPlayer.ts  usePlaybackSourceResolver.ts  useYouTubeTrailerPlayer.ts
src/pages/: AnimeDetail.tsx  Collections.tsx  FullscreenPlayback.tsx  History.tsx  Home.tsx  Library.tsx  Login.tsx  Notifications.tsx  Search.tsx  SearchResults.tsx  SeeAll.tsx
src/services/: aniSkip.ts  animeDetailEpisodes.ts  animeSchedule.ts  catalogRepository.ts  catalogSource.ts  jikan.ts  pluginExecutor.ts  pluginImport.ts  searchStorage.ts  sourceCache.ts  sourceResolver.ts  store.ts  youtubeApiLoader.ts
src/state/: appStore.ts
src/theme/: index.ts  resolver.ts  theme.types.ts
src/types/: anime.ts  plugin.ts
src/utils/: animeRanking.ts  episodeCountLabel.ts  episodeFormatters.ts  episodeTitle.ts  releaseTime.ts  search.ts  (+5 more)
(+7 files in other folders)
