[package]
name = "myanime1996"
version = "0.1.0"
description = "Retro anime metadata desktop app"
authors = ["MyAnime1996"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "myanime1996_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate", "cookies"] }
urlencoding = "2"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
