[package]
name = "myanime1996"
version = "0.1.2"
description = "Retro anime metadata desktop app"
authors = ["MyAnime1996"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "myanime1996_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate", "cookies", "blocking"] }
urlencoding = "2"
winreg = "0.55"
tauri-winrt-notification = "0.7.2"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
